--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -30,7 +30,7 @@
             </div>
             </form>
             <div class="ctn-img">
-                <img src="../../../assets/img/tarjeta2.png" alt="">
+                <img src="../../../assets/img/myInfo.png" alt="">
             </div>
     </div>
 </div>
