--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -5,19 +5,22 @@
                 <div class="ctn-texto">
                     <div class="ctn-redes">
                         <a target="_blank" href="https://www.linkedin.com/in/jorge-alexander-astaiza-cordoba-126671173/">
-                            <img src="../../../assets/img/linkedin.png" alt="">
+                            <img title="Linkedin" src="../../../assets/img/linkedin.png" alt="">
                         </a>
                         <a target="_blank" href="https://twitter.com/AlexCordobaInc">
-                            <img src="../../../assets/img/twitter.png" alt="">
+                            <img title="Twitter" src="../../../assets/img/twitter.png" alt="">
                         </a>
                         <a target="_blank" href="https://www.instagram.com/alex_cordoba___/">
-                            <img src="../../../assets/img/instagram.png" alt="">
+                            <img title="Instagram" src="../../../assets/img/instagram.png" alt="">
                         </a>
                         <a target="_blank" href="">
-                            <img src="../../../assets/img/blog.png" alt="">
+                            <img title="Blog" src="../../../assets/img/blog.png" alt="">
+                        </a>
+                        <a class="btn-cv" target="_blank" href="../../../assets/cv/Currículum.pdf" target="_blank" download="curriculum.pdf">
+                            <img title="Curriculum" src="../../../assets/img/cv.png" alt="">
                         </a>
                     </div>
-                    <h2>Jorge Alexander Córdoba</h2>
+                    <h2 class="ctn-texto-title">Jorge Alexander Córdoba</h2>
 
                     <div class="content">
                         <div class="content__container">
