--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -7,10 +7,14 @@
 }
 .ctn-redes {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(5, auto);
   justify-content: center;
   column-gap: 20px;
   margin-bottom: 50px;
+}
+.btn-cv {
+  text-decoration: none;
+  color: black;
 }
 .ctn-redes img {
   width: 35px;
@@ -41,6 +45,10 @@ ngx-emoji {
     text-align: center;
     width: 80%;
     margin: 0 auto;
+    text-align: justify;
+    &-title{
+      text-align: center;
+    }
 }
 .ctn-txt-img {
     margin-top: 65px;
@@ -253,7 +261,7 @@ ngx-emoji {
 }
 @media (min-width: 1145px) and (max-width: 1395px) {
   .content{
-    top: 10.2%;
+    top: 10.4%;
   }
   .ctn-inicio {
     height: 100vh;
@@ -262,7 +270,7 @@ ngx-emoji {
 }
 @media (min-width: 1395px) and (max-width: 1900px) {
   .content{
-    top: 12.3%;
+    top: 12.6%;
   }
   .ctn-inicio {
     height: 90vh;
@@ -284,7 +292,7 @@ ngx-emoji {
     left: 28%;
   }
   .ctn-texto {
-    width: 90%;
+    width: 100%;
   }
   .txt-description {
     margin-top: 70px;
@@ -321,7 +329,7 @@ ngx-emoji {
     margin-top: 80px;
   }
   .content {
-    top: 10%;
+    top: 11.2%;
     left: 50%;
     font-size: 17px;
   }
@@ -332,17 +340,13 @@ ngx-emoji {
     padding: 0 25px;
   }
 }
-@media (max-width: 620px) {
+@media (max-width: 600px) {
   .content {
-    top: 6.1%;
-    left: 45%;
+    top: 4%;
+    left: 50%;
+    height: 133px;
+    font-size: 22px;
   }
-  .img-avatar {
-    width: 265px;
-  }
-}
-@media (max-width: 500px) {
-  
   h2 {
     margin-top: 10px;
   }
@@ -366,12 +370,6 @@ ngx-emoji {
     font-size: 23px;
     margin-top: 70px;
   }
-  .content {
-    top: 5.3%;
-    left: 50%;
-    height: 133px;
-    font-size: 22px;
-  }
   .content__container{
     width: 260px;
     padding: 0;
@@ -381,10 +379,16 @@ ngx-emoji {
   }
   .ctn-inicio {
     width: 90% !important;
-    height: 705px;
+    height: 760px;
     margin: 0 auto;
   }
   .ctn-texto {
     width: 90%;
+  }
+}
+
+@media (max-height: 560px) {
+  .content {
+    top: 4.3%
   }
 }
