--- a/src/app/pages/my-services/my-services.component.html
+++ b/src/app/pages/my-services/my-services.component.html
@@ -23,11 +23,11 @@
               </div>
             </ng-template>
             <ng-template swiperSlide>
-              <div class="card">
+              <div class="card card-mobile">
                 <img class="card-img-top" src="../../../assets/img/mobile-application-icon.png"  alt="Card image cap">
-                <div class="card-body">
+                <div class="card-body card-info-mobile">
                   <h5 class="card-title">Aplicaciones moviles</h5>
-                  <p class="card-text">Implementación de aplicaciones móviles para Android y IOS</p>
+                  <p class="card-text">Diseño e implementación de aplicaciones móviles para Android y IOS</p>
                 </div>
               </div>
             </ng-template>
