--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -38,21 +38,21 @@
 
     <div id="content">
         <ul class="timeline">
-            <li class="event" data-date="2021">
-            <h3 class="title-event">Frontend Asesoftware S.A.S</h3>
+            <li class="timeline-event" data-date="2021">
+            <h3 class="timeline-title-event">Frontend Asesoftware S.A.S</h3>
             <p>Frontend Developer angular en Asesoftware en multiples proyectos nacionales e internacionales.</p>
             </li>
-            <li class="event" data-date="2020">
-            <h3 class="title-event">Graduacion universidad</h3>
+            <li class="timeline-event" data-date="2020">
+            <h3 class="timeline-title-event">Graduacion universidad</h3>
             <p>Graduacion como Ingenerio de sistemas informaticos.</p>   
             </li>
-            <li class="event" data-date="2019">
-            <h3 class="title-event">Frontend Sitis S.A.S</h3>
+            <li class="timeline-event" data-date="2019">
+            <h3 class="timeline-title-event">Frontend Sitis S.A.S</h3>
             <p>Lider en el semillero de desarrollo de software de la universidad.</p>
             <p>Frontend Developer angular en Sitis S.A.S desarrollando software hospitalario.</p>
             </li>
-            <li class="event" data-date="2018">
-            <h3 class="title-event">Hult Prize</h3>
+            <li class="timeline-event" data-date="2018">
+            <h3 class="timeline-title-event">Hult Prize</h3>
             <p>Ponente de idea de emprendimiento en la competencia Hult Prize.</p> 
             </li>
         </ul>
