--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -19,7 +19,7 @@ p {
     padding-bottom: 50px;
     .ctn-img img {
         max-width: 100%;
-        width: 450px;
+        width: 400px;
         box-shadow: 0px 0px 24px 4px rgba(0,0,0,0.75);
     }
     .ctn-img {
@@ -202,26 +202,10 @@ button {
     }
 }
 
-@media (max-width: 620px) {
-    .ctn-inicio-contact {
-        height: 95vh;
-        margin-top: 75px;
-    }
-    .ctn-form {
-        margin-top: 10px;
-        form { 
-            width: 100%;
-            margin-bottom: 50px;
-        }
-    }
-    .ctn-button {
-        width: 65%; 
-    }
-}
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .ctn-inicio-contact {
         height: 820px;
-        margin-top: 50px;
+        margin-top: 30px;
     }
     p {
         text-align: justify;
@@ -229,12 +213,24 @@ button {
     .ctn-form {
         width: 90%;
         padding-bottom: 60px;
-        margin-top: 50px;
+        margin-top: 80px;
+        form {
+            width: 100%;
+        }
         .ctn-img {
             margin-top: 40px;
         }
     }
     .ctn-button {
         width: 60%;
+        margin-bottom: 90px;
+    }
+}
+
+@media (max-height: 560px) {
+    .ctn-form {
+        form {
+            height: 65vh;
+        }
     }
 }
