--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,9 +1,9 @@
 <div class="ctn-inicio">
-    <div class="container ctn-txt-img">
-        <div class="row align-items-center ctn-info-inicio">
+    <div class="container ctn-info-page">
+        <div class="row align-items-center ctn-info-page-inicio">
             <div class="col" >
-                <div class="ctn-texto">
-                    <div class="ctn-redes">
+                <div class="ctn-info-page__texto ctn-texto">
+                    <div class="ctn-info-page__redes">
                         <a target="_blank" href="https://www.linkedin.com/in/jorge-alexander-astaiza-cordoba-126671173/">
                             <img title="Linkedin" src="../../../assets/img/linkedin.png" alt="">
                         </a>
@@ -13,14 +13,14 @@
                         <a target="_blank" href="https://www.instagram.com/alex_cordoba___/">
                             <img title="Instagram" src="../../../assets/img/instagram.png" alt="">
                         </a>
-                        <a target="_blank" href="">
+                        <a target="_blank" href="https://medium.com/@alexandercordoba.dev">
                             <img title="Blog" src="../../../assets/img/blog.png" alt="">
                         </a>
                         <a class="btn-cv" target="_blank" href="../../../assets/cv/Currículum.pdf" target="_blank" download="curriculum.pdf">
                             <img title="Curriculum" src="../../../assets/img/cv.png" alt="">
                         </a>
                     </div>
-                    <h2 class="ctn-texto-title">Jorge Alexander Córdoba</h2>
+                    <h2 class="ctn-info-page__title">Jorge Alexander Córdoba</h2>
 
                     <div class="content">
                         <div class="content__container">
