--- a/src/app/pages/my-services/my-services.component.html
+++ b/src/app/pages/my-services/my-services.component.html
@@ -1,15 +1,15 @@
   <div class="ctn-inicio-services">
       <div class="ctn-skills-services">
         <app-skills></app-skills>
-        <div class="ctn-swiper">
-          <h3 class="title-my-services">Mis servicios</h3>
+        <div class="ctn-skills-services__swiper ctn-swiper">
+          <h3 class="ctn-skills-services__title">Mis servicios</h3>
           <swiper [effect]="'cards'" [grabCursor]="true" class="mySwiper">
             <ng-template swiperSlide>
               <div class="card">
                 <img class="card-img-top" src="../../../assets/img/landing-page-icon.png" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Landing pages</h5>
-                  <p class="card-text">Construcción de landing pages a medida para tu negocio, tienda o pagina personal.</p>
+                  <p class="card-text">Construcción de landing pages a medida para tu negocio, tienda o página personal.</p>
                 </div>
               </div>
             </ng-template>
@@ -26,7 +26,7 @@
               <div class="card card-mobile">
                 <img class="card-img-top" src="../../../assets/img/mobile-application-icon.png"  alt="Card image cap">
                 <div class="card-body card-info-mobile">
-                  <h5 class="card-title">Aplicaciones moviles</h5>
+                  <h5 class="card-title">Aplicaciones móviles</h5>
                   <p class="card-text">Diseño e implementación de aplicaciones móviles para Android y IOS</p>
                 </div>
               </div>
