--- a/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
+++ b/src/app/pages/projects/swiper-desktop/swiper-desktop.component.html
@@ -6,7 +6,7 @@
       <div class="swiper__content">
         <span class="swiper__code">Marzo 2019</span>
         <div class="swiper__title">Aristos Soluciones S.A.S</div>
-        <div class="swiper__text">Empresa colombiana con diferentes lineas de negocio como gerencia de proyectos y gestíon de recursos humanos.</div>
+        <div class="swiper__text">Empresa colombiana con diferentes líneas de negocio como gerencia de proyectos y gestíon de recursos humanos.</div>
         <div class="ctn-stack">
           <label for="">Tecnologías</label>
           <p>HTML</p>
