--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -1,7 +1,7 @@
 
 <div class="ctn-inicio">
-    <h3>Trayectoria</h3>
-    <p class="txt-description">Conoce un poco mas a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
+    <h3>Mi trayectoria</h3>
+    <p class="txt-description">Conoce un poco más a detalle mi trayectoria en el mundo de la tecnología y el desarrollo de software</p>
     <section class="horizontal-timeline-container">
         <div class="timeline-block">
             <div class="timeline-step-counter time-line-step-one">2018</div>
