--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
     <h3>Contacto</h3>
     <p>Si tienes una idea la cual quieres materializar, contáctame y trabajemos juntos!</p>
     <div class="ctn-form">
-        <form [formGroup]="formulario" action="https://formspree.io/f/mnqwboge" method="POST" autocomplete="off">
+        <form [formGroup]="formulario" action="https://formspree.io/f/xwkywejr" method="POST" autocomplete="off">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Nombre</label>
                 <input type="text" name="name" class="form-control" formControlName="name" (keydown)="validarForm()">
@@ -15,7 +15,7 @@
                 <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
                 <input type="email" name="email"  class="form-control" id="exampleInputEmail1" formControlName="email" aria-describedby="emailHelp" (keydown)="validarForm()">
                 <div [class]="alertaEmail">
-                    Ingrese un correo electronico correcto.
+                    Ingrese un correo electrónico correcto.
                 </div>
             </div>
             <div class="mb-3">
