--- a/src/app/pages/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/inicio.component.scss
@@ -5,19 +5,9 @@
   justify-content: center;
   height: 100vh;
 }
-.ctn-redes {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  justify-content: center;
-  column-gap: 20px;
-  margin-bottom: 50px;
-}
 .btn-cv {
   text-decoration: none;
   color: black;
-}
-.ctn-redes img {
-  width: 35px;
 }
 .header {
     margin-top: 25px;
@@ -41,17 +31,27 @@ ngx-emoji {
   margin-top: 7px;
 }
 
-.ctn-texto {
-    text-align: center;
-    width: 80%;
-    margin: 0 auto;
-    text-align: justify;
-    &-title{
+.ctn-info-page {
+    margin-top: 65px;
+    &__texto {
+      text-align: center;
+      width: 80%;
+      margin: 0 auto;
+      text-align: justify;
+    }
+    &__redes {
+      display: grid;
+      grid-template-columns: repeat(5, auto);
+      justify-content: center;
+      column-gap: 20px;
+      margin-bottom: 50px;
+      img {
+        width: 35px;
+      }
+    }
+    &__title {
       text-align: center;
     }
-}
-.ctn-txt-img {
-    margin-top: 65px;
 }
 
 .faMenu {
@@ -291,7 +291,7 @@ ngx-emoji {
     top: 10.9%;
     left: 28%;
   }
-  .ctn-texto {
+  .ctn-info-page__texto {
     width: 100%;
   }
   .txt-description {
@@ -311,16 +311,13 @@ ngx-emoji {
   .img-avatar {
     max-width: 80%;
   }
-  .ctn-txt-img {
+  .ctn-info-page {
     margin-top: 160px;
   }
 }
 @media (max-width: 770px) {
   .ctn-inicio {
     height: 100vh;
-  }
-  .ctn-info-inicio {
-    flex-direction: column;
   }
   .img-avatar {
     width: 340px;
@@ -332,12 +329,15 @@ ngx-emoji {
     top: 11.2%;
     left: 50%;
     font-size: 17px;
+    &__container {
+      padding: 0 25px;
+    }
   }
-  .ctn-txt-img {
+  .ctn-info-page {
     margin-top: 60px;
-  }
-  .content__container{
-    padding: 0 25px;
+    &-inicio {
+      flex-direction: column;
+    }
   }
 }
 @media (max-width: 600px) {
@@ -346,19 +346,25 @@ ngx-emoji {
     left: 50%;
     height: 133px;
     font-size: 22px;
-  }
-  h2 {
-    margin-top: 10px;
+    &__container__list{
+      padding-left: 30px;
+    }
   }
   .ctn-img-inicio {
     margin-top: 50px;
   }
-  .ctn-txt-img{
+  .ctn-info-page {
     margin-top: 45px;
-  }
-  .ctn-info-inicio {
-    display: flex;
-    flex-direction: column;
+    &-inicio {
+      display: flex;
+      flex-direction: column;
+    }
+    &__texto {
+      width: 90%;
+    }
+    &__title {
+      margin-top: 10px;
+    }
   }
   .img-avatar {
     max-width: 85%;
@@ -374,16 +380,10 @@ ngx-emoji {
     width: 260px;
     padding: 0;
   }
-  .content__container__list {
-    padding-left: 30px;
-  }
   .ctn-inicio {
     width: 90% !important;
     height: 760px;
     margin: 0 auto;
-  }
-  .ctn-texto {
-    width: 90%;
   }
 }
 
