--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,7 +1,7 @@
 
 <div class="ctn-inicio-projects">
 
-  <h3>Projectos</h3>
+  <h3>Mis proyectos</h3>
   <p class="txt-descripcion">Algunos proyectos personales y empresariales en los que he participado</p>
   <div class="ctn-swiper">
     <app-swiper-desktop></app-swiper-desktop>
