--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,6 @@ p {
 
 body {
     background-image: url('assets/img/fondo-grandient.jpg');
-    background-repeat: round; 
+    background-repeat: inherit; 
     background-size: cover; 
 }
