--- a/src/app/pages/container/container.component.html
+++ b/src/app/pages/container/container.component.html
@@ -18,7 +18,7 @@
                         <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="about">Sobre mi</a> 
                     </li>
                     <li>
-                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="services">Mis servicios</a>
+                        <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="services">Servicios</a>
                     </li>
                     <li>
                         <a (click)="toggleMenu()" [routerLink] = "['/']" fragment="timeline">Trayectoria</a> 
