--- a/src/app/pages/container/container.component.scss
+++ b/src/app/pages/container/container.component.scss
@@ -26,9 +26,6 @@
     padding: 50px 0;
     position: relative;
 }
-.menu {
-    width: 0;
-}
 
 .ctn-boton-close {
     height: 30px;
@@ -39,9 +36,14 @@
     }
 }
 .menu-oculto {
-    display: none;
+    width: 0;
+    left: 0;
 }
-
+@media (min-width: 1000px) {
+    .menu-oculto {
+        display: none;
+    }
+}
 @media (max-width: 1000px) {
     .content{
         display: flex;
@@ -71,10 +73,9 @@
     }
     .menu {
         background-color: rgba(109, 109, 109, 0.905);
-        width: 280px;
+        width: 210px;
         position: fixed;
-   
-        height: 90vh;
+        height: auto;
         transition-duration: 500ms !important;
         border-bottom-right-radius: 30px;
         border-top-right-radius: 30px;
@@ -91,16 +92,28 @@
                 margin: 10px 0;
                 border-left: 3px solid rgb(68, 68, 68);
                 font-family: 'Hubballi', cursive;
-                font-size: 25px;
+                font-size: 20px;
             }
         }
     }
     .menu-oculto {
         width: 0;
-        height: 0;
         left: 0;
-        right: 0;
+        height: auto;
         transition-duration: 500ms !important;
+        overflow: hidden;
+        margin-top: -65px;
+        ul {
+            overflow: hidden;
+            list-style: none;
+            width: 100%;
+            margin-top: 40px;
+            li {
+                padding: 20px 0;
+                margin: 10px 0;
+                border-left: 3px solid rgb(68, 68, 68);
+            }
+        }
     }
 }
 
