iniciando con internacionalizacion

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -16,7 +16,7 @@
                         <a target="_blank" href="https://medium.com/@alexandercordoba.dev">
                             <img title="Blog" src="../../../assets/img/blog.png" alt="">
                         </a>
-                        <a class="btn-cv" target="_blank" href="../../../assets/cv/Currículum.pdf" target="_blank" download="curriculum.pdf">
+                        <a class="btn-cv" target="_blank" href="../../../assets/cv/currículum_Jorge_Astaiza_I.pdf" target="_blank" download="curriculum.pdf">
                             <img title="Curriculum" src="../../../assets/img/cv.png" alt="">
                         </a>
                     </div>
@@ -33,11 +33,15 @@
                         </div>
                     </div>
 
-                    <p class="txt-description">Hola! Soy un desarrollador de software apasionado a la tecnología con una amplia experiencia en la construcción de aplicaciones web modernas.</p>
+                    <p class="txt-description">{{ "inicio.descripcion" | translate}}</p>
                     
                 </div>
             </div>
             <div class="col align-self-center ctn-img-inicio" >
+                <select class="form-select ctn-img-inicio__idioma" aria-label="Default select example">
+                    <option value="1" > &#xf042; </option>
+                    <option value="2"> &emsp;</option>
+                  </select>
                 <img class="img-avatar" src="../../../assets/img/avatar2.png" alt="Me">
             </div>
         </div>
